Created NotebookColor class to refactor methods of getting colors throughout the application.